LF & SA Impl integration with PowSybl
